--- a/AppMain.html
+++ b/AppMain.html
@@ -2,17 +2,22 @@
 <html>
 <head>
 <title>HnH_ScoutingApp_Vr: 1.0</title>
+<style>
+    body {
+      background-image: url("HNHGearBack.png");
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: bottom left;
+    }
+    </style>
+
+   
+
 </head>
 <body>
-
-<h1>Hello to the World</h1>
-<p>Hello World!.</p>
-
-<img src="CB928D98-9A23-45BD-A313-8E6540D7A155.jpg" alt="Yeeee" width="150" height="142">
-<img src="HNHGearBack.png" alt="Yeeee" width="150" height="142">
+<div></div>
 
 <!--Hello World!!-->
-
 
 
 
