added ExFolders, animations. testhtml, otherhtml

--- a/AppMain.html
+++ b/AppMain.html
@@ -7,55 +7,9 @@
 
 
 </head>
-<body>
+<body style="background-color:darkgray;">
 
-<label for="Team#">Team#</label><br>
-<input type="number" id="Team#" name="Team#">
-
-<br>
-
-<label for="Match#">Match#</label><br>
-<input type="number" id="Match#" name="Match#">
-
-<br>
-<br>
-
-<input type="radio" id="Cubes" name="CubesConesBoth" value="Cubes">
-<label for="Cubes">Cubes</label><br>
-<input type="radio" id="Cones" name="CubesConesBoth" value="Cones">
-<label for="Cones">Cones</label><br>
-<input type="radio" id="Both" name="CubesConesBoth" value="Both">
-<label for="Both">Both</label>
-
-<br>
-<br>
-
-<input type="radio" id="1" name="Nodes" value="1">
-<label for="1">1 Node</label><br>
-<input type="radio" id="2" name="Nodes" value="2">
-<label for="2">2 Nodes</label><br>
-<input type="radio" id="3" name="Nodes" value="3">
-<label for="3">3 Nodes</label>
-
-<br>
-<br>
-
-<label for="Wieght">Weight</label><br>
-<input type="number" id="Wieght" name="Wieght">
-
-<br>
-<br>
-
-<label for="Speed">Speed</label><br>
-<input type="number" id="Speed" name="Speed">
-
-<br>
-<br>
-
-<label for="Gyro">Gyro</label><br>
-<input type="checkbox" id="Gyro" name="Gyro">
-
-
+<img id = "gear" src="Images/HNHGearBackDarkerGray.png">
 
 
 
