added imgs, touched up UI

--- a/Test.html
+++ b/Test.html
@@ -17,7 +17,7 @@ div {
 {
   width: 2000px;
   height: 2000px;
-  position: absolute;
+  position: static;
   animation-name: example;
   animation-duration: 35s;
   animation-iteration-count: infinite;
