--- a/AppMain.html
+++ b/AppMain.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HnH_ScoutingApp_Vr: 1.0</title>
-<link rel="stylesheet" href="style.css">
-   
 
+<link rel="stylesheet" href="style.css">
 
 </head>
-<body style="background-color:darkgray;">
+<body style="background-image: linear-gradient(to right, rgb(255, 102, 0), rgb(201, 154, 0), rgb(255, 115, 0));">
 
-<img id = "gear" src="Images/HNHGearBackDarkerGray.png">
+<img id = "gear" src="Images/HNHGearBackBlackGradient.png">
+<img id = "LogoMain" src="Images/KnightsLogoMinimalClear.png">
 
 
+
+<ul>
+    <li><a class="active" href="AppMain.html">Main Menu</a></li>
+    <li><a href="">Robot Archive</a></li>
+    <li><a href="EnterData.html">New Robot</a></li>
+    <li><a href="Export.html">Export Data</a></li>
+    <li id = "VersionFont" style="float:right"><a >V1.0.0</a></li>
+  </ul>
+
+  <script src="GlobalInfo.js">
+  </script>
 
 </body>
 </html>
