--- a/AppMain.html
+++ b/AppMain.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="style.css">
 
 </head>
-<body style="background-image: linear-gradient(to right, rgb(255, 0, 0), rgb(0, 171, 201), rgb(0, 72, 255));">
+<body style="background-image: linear-gradient(to right, rgb(255, 0, 0), rgb(0, 0, 255));">
 
 <img id = "gear" src="Images/HNHGearBackBlackGradient.png">
 <img id = "LogoMain" src="Images/KnightsLogoMinimalClear.png">
