fixed res, added json console input, general fix

--- a/Index.html
+++ b/Index.html
@@ -13,12 +13,13 @@
 
 
 <ul>
-    <li><a class="active" href="AppMain.html">Main Menu</a></li>
-    <li><a href="">Robot Archive</a></li>
+    <li><a class="active" href="Index.html">Main Menu</a></li>
+    <li><a href="RoboArchive.html">Robot Archive</a></li>
     <li><a href="EnterData.html">New Robot</a></li>
     <li><a href="Export.html">Export Data</a></li>
     <li id = "VersionFont" style="float:right"><a >V1.0.0</a></li>
   </ul>
+
 
   <script src="GlobalInfo.js">
   </script>
