--- a/RoboArchive.html
+++ b/RoboArchive.html
@@ -10,10 +10,10 @@
     <img id = "LogoMain" src="Images/KnightsLogoMinimalClear.png">
     
     <ul>
-      <li><a id="TopMenu" href="Index.html">Main Menu</a></li>
-      <li><a id="TopMenu" href="RoboArchive.html">Robot Archive</a></li>
-      <li><a id="TopMenu" href="EnterData.html">New Robot</a></li>
-      <li><a id="TopMenu" class="active" href="Export.html">Export Data</a></li>
+      <li><a href="Index.html">Main Menu</a></li>
+      <li><a class="active" href="RoboArchive.html">Robot Archive</a></li>
+      <li><a href="EnterData.html">New Robot</a></li>
+      <li><a href="Export.html">Export Data</a></li>
       <li id = "VersionFont" style="float:right"><a >V1.0.0</a></li>
       </ul>
     
