Fixed obvious error

--- a/EnterData.html
+++ b/EnterData.html
@@ -97,30 +97,30 @@
     <br>
 
     <label for="Auto Total Points">Total Points</label><br>
-    <input type="number" id="Auto Total Points" name="Total Points">
+    <input type="number" id="Auto Total Points" name="Auto Total Points">
 
     <h3>Teleop</h3>
 
     <label for="Teleop Cube Points">Cube Points</label><br>
-    <input type="number" id="Teleop Cube Points" name="Cube Points">
+    <input type="number" id="Teleop Cube Points" name="Teleop Cube Points">
 
     <br>
     <br>
 
     <label for="Teleop Cone Points">Cone Points</label><br>
-    <input type="number" id="Teleop Cone Points" name="Cone Points">
+    <input type="number" id="Teleop Cone Points" name="Teleop Cone Points">
 
     <br>
     <br>
 
     <label for="Teleop Fouls">Fouls</label><br>
-    <input type="number" id="Teleop Fouls" name="Fouls">
+    <input type="number" id="Teleop Fouls" name="Teleop Fouls">
 
     <br>
     <br>
 
     <label for="Teleop Total Points">Total Points</label><br>
-    <input type="number" id="Teleop Total Points" name="Total Points">
+    <input type="number" id="Teleop Total Points" name="Teleop Total Points">
 
     <br>
     <br>
