--- a/RoboArchive.html
+++ b/RoboArchive.html
@@ -12,7 +12,7 @@
     <ul>
       <li><a href="Index.html">Main Menu</a></li>
       <li><a class="active" href="RoboArchive.html">Robot Archive</a></li>
-      <li><a href="EnterData.html">New Robot</a></li>
+      <li><a href="EnterData.html">New Match</a></li>
       <li><a href="Export.html">Export Data</a></li>
       <li id = "VersionFont" style="float:right"><a >V1.0.0</a></li>
       </ul>
