--- a/EnterData.html
+++ b/EnterData.html
@@ -5,7 +5,7 @@
     
     </head>
 
-<body id = botEnter style ="background-color: rgb(104, 104, 104); overflow-y: scroll;">
+<body id = botEnter style= "background-color: #e5f1dd;">
 
     <style>
         #botEnter{
@@ -21,7 +21,7 @@
 <form>
     <h1>Match Details</h1>
 
-    <label for="Team#">Team#</label><br>
+    <label for="Team#" style="width: inherit; height: 1000;">Team#</label><br>
     <input type="number" id="Team#" name="Team#" >
     
     <br>
