--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" href="style.css">
 
 </head>
-<body style="background-image: linear-gradient(to right, rgb(255, 0, 0), rgb(0, 0, 255));">
+<body style="background-color: #e5f1dd;">
 
-<img id = "gear" src="Images/HNHGearBackBlackGradient.png">
+<img id = "gear" src="Images/HNHGearCoolGreen.png">
 <img id = "LogoMain" src="Images/KnightsLogoMinimalClear.png">
 
 
@@ -18,7 +18,7 @@
     <li><a href="RoboArchive.html">Robot Archive</a></li>
     <li><a href="EnterData.html">New Match</a></li>
     <li><a href="Export.html">Export Data</a></li>
-    <li id = "VersionFont" style="float:right"><a >V1.0.0</a></li>
+    <li id = "VersionFont" style="float:right"><a >V1.2.1</a></li>
   </ul>
 
 
