--- a/EnterData.html
+++ b/EnterData.html
@@ -21,7 +21,7 @@
 <form>
     <h1>Match Details</h1>
 
-    <label for="Team#" style="width: inherit; height: 1000;">Team#</label><br>
+    <label for="Team#">Team#</label><br>
     <input type="number" id="Team#" name="Team#" >
     
     <br>
@@ -140,7 +140,7 @@
     <br>
     <br>
 
-    <button type="submit">Submit</button>
+    <button type="submit" style="height: 100px; width: 300px">Submit</button>
 
 </form>
     
